dataset1235/2025-2/1153765216/users/2719941446/executions/2747719322_2667036473.log
== RUN (2025-08-21 19:54:56)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

print(round(tempK,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em celcius:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:45:24)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

  print(round(tempK,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:45:03)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

  print(round(tempK,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:46:44)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

print(round(tempK,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em celcius:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:45:03)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

  print(round(tempK,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:46:57)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

print(round(tempK,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em celcius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:44:47)
-- CODE: 
tempC=float(input("Temperatura em celcius:"))
tempK=tempC+273.15

  print(round(tempK,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 4
    print(round(tempK,2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
